--- a/app/front/alunativoApp/www/templates/init.html
+++ b/app/front/alunativoApp/www/templates/init.html
@@ -2,10 +2,10 @@
     <ion-content>
         <h1 align="center">Olá, participe desta causa! Venha com a gente!</h1>
         <div class="row">
-            <button class="button button-positive" style="margin: auto;"  ng-click="comecar()">COMEÇAR</button>
+            <button class="button button-positive button-centered" ng-click="comecar()">COMEÇAR</button>
         </div>
         <div class="row" >
-            <button class="button button-light" style="margin: auto;" ng-click="login()">LOGIN</button>
+            <button class="button button-light button-centered" ng-click="login()">LOGIN</button>
         </div>
     </ion-content>
 </ion-view> 
