--- a/app/front/alunativoApp/www/templates/login.html
+++ b/app/front/alunativoApp/www/templates/login.html
@@ -4,18 +4,18 @@
             <button ng-click="$ionicGoBack()" class="button button-icon icon icon-back-icon back-button"></button>
         </div>
         <!--<img src="./img/img.png" />-->
-        <div class="list" style="background: none">
-            <label class="item item-input item-floating-label">
+        <div class="list">
+            <label class="item item-input item-floating-label item-input-custom">
                 <span class="input-label">Nome do Usuário</span>
                 <input type="text" placeholder="Nome do Usuário">
             </label>
-            <label class="item item-input item-floating-label">
+            <label class="item item-input item-floating-label item-input-custom">
                 <span class="input-label">Senha</span>
                 <input type="password" placeholder="Senha">
             </label>
         </div>
-        <div class="row">
-            <button class="custom-button" ng-click="login()">ENTRAR</button>
-        </div>        
+        <div class="row" >
+            <button class="button button-positive button-centered" ng-click="login()">ENTRAR</button>
+        </div>     
     </ion-content>
 </ion-view>
