--- a/app/front/alunativoApp/www/templates/init.html
+++ b/app/front/alunativoApp/www/templates/init.html
@@ -1,10 +1,15 @@
 <ion-view view-title="AlunAtivo" hide-nav-bar="true">
-    <ion-content>
-        <h1 align="center">Olá, participe desta causa! Venha com a gente!</h1>
-        <div class="row">
+    <ion-content background-image="image-1">
+        <div class="row" style="margin-top: 70%">
+        <p style="margin: auto; font-size: 34px" align="center">Qm ñ se comunica</p>
+        </div>
+        <div class="row" style="margin-top: 10px">
+        <p style="margin: auto; font-size: 34px" align="center">se estrumbica!</p>
+        </div>
+        <div class="row" style="margin-top: 50px">
             <button class="button button-positive button-centered" ng-click="comecar()">COMEÇAR</button>
         </div>
-        <div class="row" >
+        <div class="row" style="margin-top: 10px">
             <button class="button button-light button-centered" ng-click="login()">LOGIN</button>
         </div>
     </ion-content>
