--- a/app/front/alunativoApp/www/templates/init.html
+++ b/app/front/alunativoApp/www/templates/init.html
@@ -1,16 +1,18 @@
 <ion-view view-title="AlunAtivo" hide-nav-bar="true">
     <ion-content background-image="image-1">
-        <div class="row" style="margin-top: 70%">
-        <p style="margin: auto; font-size: 34px" align="center">Qm ñ se comunica</p>
-        </div>
-        <div class="row" style="margin-top: 10px">
-        <p style="margin: auto; font-size: 34px" align="center">se estrumbica!</p>
-        </div>
-        <div class="row" style="margin-top: 50px">
-            <button class="button button-positive button-centered" ng-click="comecar()">COMEÇAR</button>
-        </div>
-        <div class="row" style="margin-top: 10px">
-            <button class="button button-light button-centered" ng-click="login()">LOGIN</button>
+        <div>
+            <div class="row" >
+            <p style="margin: auto; font-size: 34px" align="center">Qm ñ se comunica</p>
+            </div>
+            <div class="row" >
+            <p style="margin: auto; font-size: 34px" align="center">se estrumbica!</p>
+            </div>
+            <div class="row" >
+                <button class="button button-positive button-centered" ng-click="comecar()">COMEÇAR</button>
+            </div>
+            <div class="row" >
+                <button class="button button-light button-centered" ng-click="login()">LOGIN</button>
+            </div>
         </div>
     </ion-content>
 </ion-view> 
