--- a/app/front/alunativoApp/www/templates/tabs.html
+++ b/app/front/alunativoApp/www/templates/tabs.html
@@ -5,6 +5,11 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
+  <!-- Main Tab -->
+  <ion-tab title="Eventos" icon-off="ion-speakerphone" icon-on="ion-speakerphone" href="#/tab/events">
+    <ion-nav-view name="tab-events"></ion-nav-view>
+  </ion-tab>
+
   <!-- Dashboard Tab -->
   <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
