--- a/app/front/alunativoApp/www/templates/init.html
+++ b/app/front/alunativoApp/www/templates/init.html
@@ -1,17 +1,15 @@
 <ion-view view-title="AlunAtivo" hide-nav-bar="true">
     <ion-content background-image="image-1">
-        <div>
+        <div id="footer-gradient"></div>
+        <div id="footer-content">
             <div class="row" >
-            <p style="margin: auto; font-size: 34px" align="center">Qm ñ se comunica</p>
+                <p class="title" ><span>Qm ñ</span> se comunica <br> se estrumbica!</p>
             </div>
             <div class="row" >
-            <p style="margin: auto; font-size: 34px" align="center">se estrumbica!</p>
+                <button class="button button-positive button-centered btn-conhecer" ng-click="comecar()">CONHEÇER</button>
             </div>
             <div class="row" >
-                <button class="button button-positive button-centered" ng-click="comecar()">COMEÇAR</button>
-            </div>
-            <div class="row" >
-                <button class="button button-light button-centered" ng-click="login()">LOGIN</button>
+                <button class="button button-light button-centered btn-entrar" ng-click="login()">ENTRAR</button>
             </div>
         </div>
     </ion-content>
