--- a/app/front/alunativoApp/www/css/init.css
+++ b/app/front/alunativoApp/www/css/init.css
@@ -40,6 +40,18 @@ p.title {
 
 p.title span {
     color: #D2CCA6;
+    position: relative;
+}
+p.title span::after{
+    content: "";
+    position: absolute;
+    left: -20%;
+    width: 140%;
+    height: 20px;
+    bottom: -15px;
+    background: url('../img/underline.svg') no-repeat center center;
+    -webkit-background-size: 100%;
+    background-size: 100%;
 }
 
 #footer-gradient {
