--- a/app/front/alunativoApp/www/templates/tab-events.html
+++ b/app/front/alunativoApp/www/templates/tab-events.html
@@ -1,28 +1,61 @@
 <ion-view view-title="Eventos">
   <ion-content class="padding">
+
+    <div class="card">
+      <div class="image-megafone">
+        <img ng-src="img/megafone.png">
+      </div>
+
+        <div class="megafone">
+          <h3>Compartilhe agora!</h3>
+          <h6>Pode acreditar...juntos somos fortes.</h6>
+        </div>
+     </div>
+
+    <h4>Recentes</h4>
+
     <ion-list>
 
        <div class="list card" ng-repeat="event in events" type="item-text-wrap" href="#/tab/events/{{event.id}}">
+
           <div class="item item-avatar">
             <img ng-src="{{event.face}}">
+
             <h2>{{event.name}}</h2>
-            <p>November 05, 1955</p>
+            <p>{{event.lastText}}</p>
+            <button class="button button-small button-assertive">
+              EU APOIO
+            </button>
+            <div class="time-event">
+              <h2>{{event.date}}</h2>
+            </div>
           </div>
 
-          <div class="item item-body">
-            <img class="full-image" src="delorean.jpg">
-            <p>
-              <p>{{event.lastText}}</p>
-            </p>
 
-            <p>
-              <a href="#" class="subdued">3 Apoios</a>
-              <a href="#" class="subdued">5 Comentários</a>
-              <a href="#/tab/events/{{event.id}}">DETALHE</a>
-            </p>
-
-          </div>
       </div>
+
+      <h4>Populares</h4>
+
+      <div class="list card" ng-repeat="event in events" type="item-text-wrap" href="#/tab/events/{{event.id}}">
+
+
+
+        <div class="item item-avatar">
+          <img ng-src="{{event.face}}">
+
+          <h2>{{event.name}}</h2>
+          <p>{{event.lastText}}</p>
+          <button class="button button-small button-assertive">
+            EU APOIO
+          </button>
+          <div class="time-event">
+            <h2>{{event.date}}</h2>
+          </div>
+
+        </div>
+
+         </div>
+     </div>
     </ion-item>
     <ion-list>
 
