--- a/app/front/alunativoApp/www/css/events.css
+++ b/app/front/alunativoApp/www/css/events.css
@@ -8,7 +8,17 @@
 
 .time-event{
   float:right;
-  margin-top: 10px;
+  margin-top: 9px;
   color: grey;
   margin-right: 82px;
+}
+
+.content-event a{
+  text-decoration: none;
+  color: grey;
+}
+
+.title-event a{
+  text-decoration: none;
+  color: black;
 }
