--- a/app/front/alunativoApp/www/css/login.css
+++ b/app/front/alunativoApp/www/css/login.css
@@ -1,30 +1,39 @@
 #main{
-    padding: 40px;
+    padding: 15px;
 }
 
 #main label.item {
     border-width: 0 0 2px;
     border-color: #ddd;
     padding-left: 0 !important;
-    
 }
 
 #main span.input-label {
     font-size: 14px !important;
     color: #444 !important;
+    width: 100%;
 }
 
 #main input::-webkit-input-placeholder {
    color: #444 !important;
+   width: 100%;
 }
 
 .btn-default {
-    margin-top: 30px;
-    padding: 0px 40px;
+    margin-top: 35px;
+    padding: 0px 30px;
 }
 
 .btn-default.transparent {
     padding: 0px 20px;
     background-color: transparent;
     color: #444;
+}
+
+.login-blackground {
+    background-color: #ddd;
+}
+
+.card {
+    padding: 15px;
 }
