--- a/app/front/alunativoApp/www/templates/login.html
+++ b/app/front/alunativoApp/www/templates/login.html
@@ -1,10 +1,14 @@
 <ion-view  hide-nav-bar="true">
     <ion-content class="login-blackground">
-        <div class="row">
-            <button ng-click="$ionicGoBack()" class="button button-icon icon icon-back-icon back-button">VOLTAR</button>
+        <div class="row content-header">
+            <button ng-click="$ionicGoBack()" class="button button-icon icon icon-back-icon back-button">
+                <i class="icon ion-android-arrow-back"></i> 
+                <span class="back-text">VOLTAR</span>
+            </button>
         </div>
-        <div id="main">
+        <div id="main" class="row row-center">
             <div class="card">
+                <h1>Identifique-se</h1>
                 <div class="item item-text-wrap">
                     <label class="item item-input item-floating-label ">
                         <span class="input-label">Nome do Usuário</span>
