--- a/app/front/alunativoApp/www/templates/event-datail.html
+++ b/app/front/alunativoApp/www/templates/event-datail.html
@@ -8,7 +8,7 @@
   <ion-content class="padding">
 
     <div class="card">
-      <div class="item item-text-wrap item-avatar">
+      <div class="item item-text-wrap item-avatar content-text-card">
         <img ng-src="{{event.face}}">
 
         <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="card">
-      <div class="item item-text-wrap">
+      <div class="item item-avatar">
         <h3>{{event.name}}</h3>
 
         <hr>
