--- a/app/front/alunativoApp/www/templates/init.html
+++ b/app/front/alunativoApp/www/templates/init.html
@@ -9,7 +9,7 @@
                 <button class="button button-positive button-centered btn-conhecer" ng-click="comecar()">CONHEÇER</button>
             </div>
             <div class="row" >
-                <button class="button button-light button-centered btn-entrar" ng-click="login()">ENTRAR</button>
+                <button class="button button-light button-centered btn-entrar" ng-click="login()">LOGIN</button>
             </div>
         </div>
     </ion-content>
