Conhecer com C cidilha

--- a/app/front/alunativoApp/www/templates/init.html
+++ b/app/front/alunativoApp/www/templates/init.html
@@ -6,7 +6,7 @@
                 <p class="title" ><span>Qm ñ</span> se comunica <br> se estrumbica!</p>
             </div>
             <div class="row" >
-                <button class="button button-positive button-centered btn-conhecer" ng-click="comecar()">CONHEÇER</button>
+                <button class="button button-positive button-centered btn-conhecer" ng-click="comecar()">CONHECER</button>
             </div>
             <div class="row" >
                 <button class="button button-light button-centered btn-entrar" ng-click="login()">LOGIN</button>
