--- a/app/front/alunativoApp/www/css/app.css
+++ b/app/front/alunativoApp/www/css/app.css
@@ -25,6 +25,11 @@
     width: 100%;
     padding: 0 !important;
 }
+
+.card-img{
+    width: 100%;
+    padding: 0 !important;
+}
 .button-centered {
     margin: auto;
 }
