--- a/app/front/alunativoApp/www/templates/tab-events.html
+++ b/app/front/alunativoApp/www/templates/tab-events.html
@@ -1,9 +1,6 @@
-
 <ion-view view-title="Eventos">
-    <ion-nav-buttons side="left">
-        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-      </ion-nav-buttons>
-  <ion-content class="padding has-header">
+  <ion-content class="padding">
+
     <div class="card">
       <div class="row">
         <div class="image-megafone col col-25" >
@@ -56,16 +53,20 @@
              <div class="col">
                <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
                <p>{{event.lastText}}</p>
-               <button class="button button-small button-assertive" ng-click="count = count + 1" ng-init="count=3">
-                 EU APOIO {{count}}
-               </button>
+                <div class="row">
+                  <button class="button button-small button-assertive col col-50" ng-click="count = count + 1" ng-init="count=3">
+                    EU APOIO {{count}}
+                  </button>
 
-               <div class="time-event">
-                 <h2>{{event.date}}</h2>
-               </div>
+                  <div class="time-event col">
+                    <h2>{{event.date}}</h2>
+                  </div>
+                </div>
+
              </div>
            </div>
          </div>
+
 
      </div>
      </div>
