--- a/app/front/alunativoApp/www/templates/tab-events.html
+++ b/app/front/alunativoApp/www/templates/tab-events.html
@@ -53,22 +53,19 @@
              <div class="col">
                <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
                <p>{{event.lastText}}</p>
-                <div class="row">
-                  <button class="button button-small button-assertive col col-50" ng-click="count = count + 1" ng-init="count=3">
-                    EU APOIO {{count}}
-                  </button>
+               <button class="button button-small button-assertive" ng-click="count = count + 1" ng-init="count=3">
+                 EU APOIO {{count}}
+               </button>
 
-                  <div class="time-event col">
-                    <h2>{{event.date}}</h2>
-                  </div>
-                </div>
-
+               <div class="time-event">
+                 <h2>{{event.date}}</h2>
+               </div>
              </div>
            </div>
          </div>
 
-
      </div>
+
      </div>
     </ion-item>
     <ion-list>
