--- a/app/front/alunativoApp/www/templates/login.html
+++ b/app/front/alunativoApp/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view  hide-nav-bar="true">
-    <ion-content class="login-blackground">
+    <ion-content class="login-background">
         <div class="row content-header">
             <button ng-click="$ionicGoBack()" class="button button-icon icon icon-back-icon back-button">
                 <i class="icon ion-android-arrow-back"></i> 
