--- a/app/front/alunativoApp/www/templates/tab-events.html
+++ b/app/front/alunativoApp/www/templates/tab-events.html
@@ -1,6 +1,8 @@
-<ion-view view-title="Eventos">
-  <ion-content class="padding">
-
+<ion-view view-title="Falaê">
+    <ion-nav-buttons side="left">
+         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+  <ion-content class="padding has-header events-background">
     <div class="card">
       <div class="row">
         <div class="image-megafone col col-25" >
