--- a/app/front/alunativoApp/www/templates/tab-events.html
+++ b/app/front/alunativoApp/www/templates/tab-events.html
@@ -28,7 +28,7 @@
               <div class="col">
                 <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
                 <p>{{event.lastText}}</p>
-                <button class="button button-small button-assertive" ng-click="count = count + 1" ng-init="count=3">
+                <button class="button button-small button-assertive" ng-click="share()" ng-init="count=3">
                   EU APOIO {{count}}
                 </button>
 
