Corrige frase Init. Adiciona botão Cadastre-se.

--- a/app/front/alunativoApp/www/templates/init.html
+++ b/app/front/alunativoApp/www/templates/init.html
@@ -3,7 +3,7 @@
         <div id="footer-gradient"></div>
         <div id="footer-content">
             <div class="row" >
-                <p class="title" ><span>Qm ñ</span> se comunica <br> se estrumbica!</p>
+                <p class="title" ><span>Qm ñ</span> comunica <br> se estrumbica!</p>
             </div>
             <div class="row" >
                 <button class="button button-positive button-centered btn-conhecer" ng-click="comecar()">CONHECER</button>
