--- a/app/front/alunativoApp/www/templates/userRegister.html
+++ b/app/front/alunativoApp/www/templates/userRegister.html
@@ -1,5 +1,11 @@
-<ion-view>
+<ion-view hide-nav-bar="false" >
     <ion-content class="login-blackground">
+        <!-- <div class="row content-header">
+            <button ng-click="$ionicGoBack()" class="button button-icon icon icon-back-icon back-button">
+                <i class="icon ion-android-arrow-back"></i> 
+                <span class="back-text">VOLTAR</span>
+            </button>
+        </div> -->
         <div id="main" class="row row-center">
             <div class="card">
                 <h1>Cadastre-se</h1>
