--- a/app/front/alunativoApp/www/css/login.css
+++ b/app/front/alunativoApp/www/css/login.css
@@ -25,7 +25,8 @@
 }
 
 .btn-default.transparent {
-    padding: 0px 20px;
+    padding:0px;
+    width:100%;
     background-color: transparent;
     color: #444;
 }
