--- a/app/front/alunativoApp/www/templates/login.html
+++ b/app/front/alunativoApp/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view  hide-nav-bar="true">
+<ion-view hide-nav-bar="true">
     <ion-content class="login-blackground">
         <div class="row content-header">
             <button ng-click="$ionicGoBack()" class="button button-icon icon icon-back-icon back-button">
@@ -23,7 +23,7 @@
                             <button class="button button-positive btn-default" ng-click="login()">ENTRAR</button>
                         </div>
                         <div class="col">
-                            <button class="button btn-default transparent" ng-click="$ionicGoBack()">CANCELAR</button>        
+                            <button class="button btn-default transparent" ng-click="userRegister()">CADASTRE-SE</button>        
                         </div>
                     </div>
                 </div>
