--- a/app/front/alunativoApp/www/templates/event-datail.html
+++ b/app/front/alunativoApp/www/templates/event-datail.html
@@ -13,15 +13,16 @@
           <div class="col col-25">
             <img ng-src="{{event.face}}">
           </div>
-
-          <div class="col">
-            <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
-            <p class="content-event"><a href="#/tab/events/{{event.id}}">{{event.lastText}}</a></p>
-            <button class="button button-small button-assertive">
-              EU APOIO
-            </button>
-            <div class="time-event">
-              <h2>{{event.date}}</h2>
+          <div class="col-content">
+            <div class="col">
+              <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
+              <p class="content-event"><a href="#/tab/events/{{event.id}}">{{event.lastText}}</a></p>
+              <button class="button button-small button-assertive">
+                EU APOIO
+              </button>
+              <div class="time-event">
+                <h2>{{event.date}}</h2>
+              </div>
             </div>
           </div>
         </div>
