--- a/app/front/alunativoApp/www/templates/login.html
+++ b/app/front/alunativoApp/www/templates/login.html
@@ -9,6 +9,7 @@
         <div id="main" class="row row-center">
             <div class="card">
                 <h1>Identifique-se</h1>
+
                 <div class="item item-text-wrap">
                     <label class="item item-input item-floating-label ">
                         <span class="input-label">Nome do Usuário</span>
@@ -23,7 +24,7 @@
                             <button class="button button-positive btn-default" ng-click="login()">ENTRAR</button>
                         </div>
                         <div class="col">
-                            <button class="button btn-default transparent" ng-click="userRegister()">CADASTRE-SE</button>        
+                            <button class="button btn-default transparent" ng-click="$ionicGoBack()">CANCELAR</button>        
                         </div>
                     </div>
                 </div>
