--- a/app/front/alunativoApp/www/css/app.css
+++ b/app/front/alunativoApp/www/css/app.css
@@ -33,3 +33,33 @@
 .button-centered {
     margin: auto;
 }
+
+
+.item-select select {
+    width: 100%;
+    height: 40px;
+    display: block;
+    position: static;
+    max-width: none;
+    padding: 0;
+    text-align: left !important;
+    direction:ltr;
+}
+
+.item-select:after {
+    top:initial;
+    bottom:15px;
+    clear:both;
+}
+
+
+.card .item:last-child, .list-inset .item:last-child { margin-bottom:0; }
+.card .item.item-input input, .list-inset .item.item-input input, .padding > .list .item.item-input input, .padding-horizontal > .list .item.item-input input { padding-right:0; }
+
+
+.item-checkbox { margin:15px 0; border:0; }
+.item-checkbox { margin:15px 0; border:0; }
+.checkbox.checkbox-input-hidden.checkbox-square { position:static; margin:0; padding:0; float:left; }
+.item.item-input.item-select.item-floating-label { border-bottom:2px solid #DDD; }
+
+button.btn-default.transparent {  }
