--- a/app/front/alunativoApp/www/templates/userRegister.html
+++ b/app/front/alunativoApp/www/templates/userRegister.html
@@ -2,7 +2,7 @@
     <ion-content class="login-blackground">
         <!-- <div class="row content-header">
             <button ng-click="$ionicGoBack()" class="button button-icon icon icon-back-icon back-button">
-                <i class="icon ion-android-arrow-back"></i> 
+                <i class="icon ion-android-arrow-back"></i>
                 <span class="back-text">VOLTAR</span>
             </button>
         </div> -->
@@ -10,7 +10,7 @@
             <div class="card">
                 <h1>Cadastre-se</h1>
                 <div class="item item-text-wrap">
-                    
+
                     <div class="row">
                         <div class="col">
                             <label class="item item-input item-floating-label ">
@@ -19,13 +19,13 @@
                             </label>
                         </div>
                     </div>
-                    
+
                     <div class="row">
                         <div class="col col-50">
                             <label class="item item-input">
                                 <span class="input-label">Data</span>
                                 <input type="date">
-                            </label>  
+                            </label>
                         </div>
                         <div class="col">
                             <label class="item item-input item-select">
@@ -39,7 +39,7 @@
                             </label>
                         </div>
                     </div>
-                    
+
                     <div class="row">
                         <div class="col">
                             <label class="item item-input item-floating-label ">
@@ -48,7 +48,7 @@
                             </label>
                         </div>
                     </div>
-                    
+
                      <div class="row">
                         <div class="col">
                             <ion-list>
@@ -56,22 +56,21 @@
                             </ion-list>
                         </div>
                     </div>
-                    
+
                     <label ng-if="isAluno" class="item item-input item-select">
                         <div class="input-label">
                         Escola
                         </div>
-                        <select>
-                        <option>Escola 1</option>
-                        <option>Escola 2</option>
-                        </select>
+                        <select name="escola" id="escola"
+                          ng-options="escola.name for escola in escolas track by escola.id"
+                          ng-model="usuario.school_id"></select>
                     </label>
                     <div class="row">
                         <div class="col col-50">
                             <button class="button button-positive btn-default" ng-click="userRegister()">CADASTRAR</button>
                         </div>
                         <div class="col">
-                            <button class="button btn-default transparent" ng-click="$ionicGoBack()">CANCELAR</button>        
+                            <button class="button btn-default transparent" ng-click="$ionicGoBack()">CANCELAR</button>
                         </div>
                     </div>
                 </div>
