--- a/app/front/alunativoApp/www/templates/tab-events.html
+++ b/app/front/alunativoApp/www/templates/tab-events.html
@@ -1,84 +1,84 @@
 <ion-view view-title="Falaê">
-    <ion-nav-buttons side="left">
-         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-    </ion-nav-buttons>
-  <ion-content class="padding has-header events-background">
-    <div class="card">
-      <div class="row">
-        <div class="image-megafone col col-25" >
-          <img ng-src="img/megafone.png">
-        </div>
-          <div class="col-content">
-          <div class="megafone col">
-            <h3>Compartilhe</h3>
-            <h6>Pode acreditar...juntos somos fortes.</h6>
-          </div>
-        </div>
-      </div>
-     </div>
+		<ion-nav-buttons side="left">
+				 <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+		</ion-nav-buttons>
+	<ion-content class="padding has-header events-background">
+		<div class="card no-padding card-compatilhe">
+			<div class="row">
+				<div class="col-left image-megafone col col-25" >
+					<img src="../img/megaphone.png" alt="">
+				</div>
+				<div class="col-content">
+					<div class="megafone col">
+						<h3>Compartilhe</h3>
+						<h6>Juntos somos fortes.</h6>
+					</div>
+				</div>
+			</div>
+		 </div>
 
-    <h4 ng-show="eventsRecentes.length">Recentes</h4>
+		<h4 ng-show="eventsRecentes.length">Recentes</h4>
 
-    <ion-list>
+		<ion-list>
 
-       <div class="list card " ng-repeat="event in eventsRecentes" type="item-text-wrap" href="#/tab/events/{{event.id}}">
-          <div class="item">
-            <div class="row">
-              <div class="col col-25">
-                <img ng-src="{{event.face}}">
-              </div>
-              <div class="col-content">
+			 <div class="list card no-padding" ng-repeat="event in eventsRecentes" type="item-text-wrap" href="#/tab/events/{{event.id}}">
+					<div class="item">
+						<div class="row">
+							<div class="col-left col col-25">
+								<div class="figure {{event.category}}"></div>
+							</div>
 
-                <div class="col">
-                  <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
-                  <p>{{event.lastText}}</p>
-                  <button class="button button-small button-assertive" ng-click="share()" ng-init="count=3">
-                    EU APOIO {{count}}
-                  </button>
+							<div class="col-content">
+								<div class="col">
+									<h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
+									<p>{{event.lastText}}</p>
+									<button class="button button-small button-assertive" ng-click="share()" ng-init="count=3">
+										EU APOIO {{count}}
+									</button>
 
-                  <div class="time-event">
-                    <h2>{{event.date}}</h2>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+									<div class="time-event">
+										<h2>{{event.date}}</h2>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
-      </div>
+			</div>
 
-      <h4 ng-show="eventsPopulares.length">Populares</h4>
+			<h4 ng-show="eventsPopulares.length">Populares</h4>
 
-      <div class="list card " ng-repeat="event in eventsPopulares" type="item-text-wrap" href="#/tab/events/{{event.id}}">
-         <div class="item">
-           <div class="row">
-             <div class="col col-25">
-               <img ng-src="{{event.face}}">
-             </div>
+			<div class="list card no-padding" ng-repeat="event in eventsPopulares" type="item-text-wrap" href="#/tab/events/{{event.id}}">
+				 <div class="item">
+					 <div class="row">
+						 <div class="col-left col col-25">
+							<div class="figure {{event.category}}"></div>
+						 </div>
 
 
-            <div class="col-content">
-              <div class="col">
-                <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
-                <p>{{event.lastText}}</p>
-                <button class="button button-small button-assertive" ng-click="count = count + 1" ng-init="count=3">
-                  EU APOIO {{count}}
-                </button>
+						<div class="col-content">
+							<div class="col">
+								<h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
+								<p>{{event.lastText}}</p>
+								<button class="button button-small button-assertive" ng-click="count = count + 1" ng-init="count=3">
+									EU APOIO {{count}}
+								</button>
 
-                <div class="time-event">
-                  <h2>{{event.date}}</h2>
-                </div>
-              </div>
+								<div class="time-event">
+									<h2>{{event.date}}</h2>
+								</div>
+							</div>
 
-            </div>
+						</div>
 
-           </div>
-         </div>
+					 </div>
+				 </div>
 
-     </div>
+		 </div>
 
-     </div>
-    </ion-item>
-    <ion-list>
+		 </div>
+		</ion-item>
+		<ion-list>
 
-  </ion-content>
+	</ion-content>
 </ion-view>
