--- a/app/front/alunativoApp/www/templates/event-datail.html
+++ b/app/front/alunativoApp/www/templates/event-datail.html
@@ -16,7 +16,7 @@
           <div class="col-content">
             <div class="col">
               <h2 class="title-event"><a href="#/tab/events/{{event.id}}">{{event.name}}</a></h2>
-              <p class="content-event"><a href="#/tab/events/{{event.id}}">{{event.lastText}}</a></p>
+              <p class="content-event"><a href="#/tab/events/{{event.id}}">{{event.school.name}}</a></p>
               <button class="button button-small button-assertive">
                 EU APOIO
               </button>
