--- a/app/front/alunativoApp/www/templates/menu.html
+++ b/app/front/alunativoApp/www/templates/menu.html
@@ -8,7 +8,8 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-content class="has-header">
+    <ion-content class="has-header" style="padding:0 40px !important;">
+    <h1 style="padding-bottom:10px; font-size:27px; font-weight:300; color:#3366BA;">Índice</h1>
       <ion-list>
         <ion-item ng-if="!logged" menu-close ng-controller="InitCtrl" ng-click="login()">
           Login
